# FaceTracking

app/: build.gradle
app/src/androidTest/java/com/ben/android/facetracking/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ben/android/facetracking/: AndroidUtilities.java  CameraHelper.java  FaceTrackingHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ben/android/facetracking/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  native-lib.cpp
